--- a/.github/workflows/common-repo-workflow.yml
+++ b/.github/workflows/common-repo-workflow.yml
@@ -102,42 +102,43 @@ jobs:
       with:
         # Repository name with owner. For example, actions/checkout
         repository: # optional, default is ${{ github.repository }}
-        
-    - name: Sonar Cloud Analysis
-      if: success() # always() failure() success()
-      run: >
-          mvn -B verify -DskipTests sonar:sonar
-          -Dsonar.projectKey=$SONAR_PROJECT_KEY
-          -Dsonar.organization=$SONAR_ORG_KEY
-          -Dsonar.host.url=$SONAR_URL
-          -Dsonar.login=$SONAR_TOKEN
-      env:
-          GITHUB_TOKEN: ${{ secrets.GHP_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
-          SONAR_URL: ${{ secrets.SONAR_URL }}
-          SONAR_ORG_KEY: ${{ secrets.SONAR_ORG_KEY }}
+
+    # uncomment below lines of code to trigger a new scan        
+    # - name: Sonar Cloud Analysis
+    #   if: success() # always() failure() success()
+    #   run: >
+    #       mvn -B verify -DskipTests sonar:sonar
+    #       -Dsonar.projectKey=$SONAR_PROJECT_KEY
+    #       -Dsonar.organization=$SONAR_ORG_KEY
+    #       -Dsonar.host.url=$SONAR_URL
+    #       -Dsonar.login=$SONAR_TOKEN
+    #   env:
+    #       GITHUB_TOKEN: ${{ secrets.GHP_TOKEN }}
+    #       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    #       SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+    #       SONAR_URL: ${{ secrets.SONAR_URL }}
+    #       SONAR_ORG_KEY: ${{ secrets.SONAR_ORG_KEY }}
     
-    # - name: ServiceNow DevOps Sonar Scan Results
-    # # You may pin to the exact commit or the version.     
-    #   uses: ServiceNow/servicenow-devops-sonar@v2.0.0
-    #   with:
-    #       # ServiceNow Instance URL
-    #       instance-url: ${{ secrets.SN_INSTANCE_URL }}
-    #       # Devops Integration User Name
-    #       devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
-    #       # Devops Integration User Password
-    #       devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
-    #       # Orchestration Tool Id
-    #       tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-    #       # Github Context
-    #       context-github: ${{ toJSON(github) }}
-    #       # Display Name of the Job
-    #       job-name: 'Sonar Scan'
-    #       # Sonar Host URL
-    #       sonar-host-url: ${{ secrets.SONAR_URL }}
-    #       # Sonar Project Key
-    #       sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
+    - name: ServiceNow DevOps Sonar Scan Results
+    # You may pin to the exact commit or the version.     
+      uses: ServiceNow/servicenow-devops-sonar@v2.0.0
+      with:
+          # ServiceNow Instance URL
+          instance-url: ${{ secrets.SN_INSTANCE_URL }}
+          # Devops Integration User Name
+          devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
+          # Devops Integration User Password
+          devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
+          # Orchestration Tool Id
+          tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+          # Github Context
+          context-github: ${{ toJSON(github) }}
+          # Display Name of the Job
+          job-name: 'Sonar Scan'
+          # Sonar Host URL
+          sonar-host-url: ${{ secrets.SONAR_URL }}
+          # Sonar Project Key
+          sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
 
   securityScan:
     name: 'Security Scan'
@@ -150,6 +151,19 @@ jobs:
         # Repository name with owner. For example, actions/checkout
         repository: # optional, default is ${{ github.repository }}
 
+    # uncomment below lines of code to trigger a Veracode scan
+    # - name: Veracode Upload And Scan
+    #   uses: veracode/veracode-uploadandscan-action@0.2.6
+    #   with:
+    #       appname: 'ServiceNow DevOps App#1'
+    #       createprofile: false
+    #       filepath: 'target/*.jar'
+    #       #version: ${{ github.run_id }}-${{ github.run_number }}-${{ github.run_attempt }}
+    #       vid: '${{ secrets.VERACODE_API_ID }}'
+    #       vkey: '${{ secrets.VERACODE_API_KEY }}'
+    #       #deleteincompletescan: 1
+    #       scantimeout: 20
+
     - name: ServiceNow DevOps Security Results
       uses: ServiceNow/servicenow-devops-security-result@v2.0.0
       with:
@@ -161,19 +175,6 @@ jobs:
           context-github: ${{ toJSON(github) }}
           job-name: 'Security Scan'
           security-result-attributes: '{ "scanner": "${{ secrets.SCANNER_NAME }}", "applicationName": "${{ secrets.VULNERABILITY_APPLICATION_NAME }}", "securityToolId": "8b1cc9ad87d1b11067b2caa5cebb3557" }'
-
-    # uncomment below code to trigger a Veracode scan and get the security results
-    - name: Veracode Upload And Scan
-      uses: veracode/veracode-uploadandscan-action@0.2.6
-      with:
-          appname: 'ServiceNow DevOps App#1'
-          createprofile: false
-          filepath: 'target/*.jar'
-          #version: ${{ github.run_id }}-${{ github.run_number }}-${{ github.run_attempt }}
-          vid: '${{ secrets.VERACODE_API_ID }}'
-          vkey: '${{ secrets.VERACODE_API_KEY }}'
-          #deleteincompletescan: 1
-          scantimeout: 20
 
   registerPackage:
     name: 'Register Package'
@@ -238,17 +239,30 @@ jobs:
           abortOnChangeCreationFailure: 'false'
           abortOnChangeStepTimeout: 'false'
           change-request: '{
-              "setCloseCode": "true",
-              "attributes": {
-                  "short_description": "Automated Software Deployment",
-                  "description": "Automated Software Deployment.",
-                  "assignment_group": "a715cd759f2002002920bde8132e7018",
-                  "implementation_plan": "Software update is tested and results can be found in Test Summaries Tab.",
-                  "backout_plan": "When software fails in production, the previous software release will be re-deployed.",
-                  "test_plan": "Testing if the software was successfully deployed",
-                  "chg_model": {"name": "normal"}
-              }
+            "attributes": {
+              "requested_by": {
+                "name": "DevOps System"
+              },
+              "assignment_group": {
+              "name": "Change Management"
+              },
+              "priority": "2",
+              "comments": "This is a sample pipeline script to be added in your change step",
+              "work_notes": "Update this to work_notes",
+              "start_date": "2023-09-07 11:59:59",
+              "end_date": "2023-09-09 11:59:59"
+            }
           }'
+          
+  # uncomment below lines of code to create change request using deployment gates, indent code if necessary
+  #         deployment-gate: '{"environment":"prod", "jobId":"deploy", "jobName":"Deploy"}'
+  # deploy:
+  #   name: 'Deploy'
+  #   needs: change
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: Run deployment scripts
+  #     run: echo 'Deployment step in progress...'
 
   deploy:
     name: 'Deploy'
